--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="header">
         <div class="menu-heading-left">
-            Welcome to <strong>Shop Saver</strong>
+            Welcome back <strong>{{userName}}</strong>
         </div>
         <div class="menu-icon-holder-right">
             <div class="round-icon">
@@ -33,6 +33,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-primary" (click)="logout()">Confirm</button>
-        <button type="button" class="btn btn-secondary" (click)="hideModal()">Close</button>
+        <button type="button" class="btn btn-secondary" (click)="hideModal()">Cancel</button>
     </div>
 </ng-template>
