--- a/src/app/loading/loading.component.scss
+++ b/src/app/loading/loading.component.scss
@@ -1,7 +1,7 @@
 .overlay {
     text-align: center;
     position: fixed;
-    background: linear-gradient(135deg, rgba(150, 213, 233, 1) 0%, rgba(14, 148, 206, 1) 100%);
+    background: rgb(68, 183, 250);
     width: 100%;
     height: 100%;
     top: 0px;
