--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,132 +1,99 @@
-fa {
-    color: #fff;
+h1, h2 {
+    color: #ffffff;
 }
 
-.stock-container .card{
-    border: unset;
-}
-
-.logout {
+h1 {
     text-align: center;
-    margin: auto;
-    
-}
-
-.logout button {
-    float: right;
-    width: 200px;
-}
-
-.container {
-    padding-bottom: 100px;
-}
-
-.product-active {
-    color: green;
-}
-
-.product-inactive {
-    color: red;
-}
-
-.stock-holder {
-    height: 460px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 12px 1px;
-}
-
-.stock-holder img {
-    object-fit: cover;
-    height: 250px;
-    padding: 25px;
-    transition: 0.3s;
-}
-
-.stock-holder img:hover {
-    transform: scale(1.03);
-}
-
-.stock-holder a:hover {
-    cursor: pointer;
-}
-
-.bubble {
-    width: 100px;
-    height: 100px;
-    background: #2FA4E7;
-    color: #fff;
-    box-shadow: 3px 3px 22px rgb(63, 63, 63);
-    border-radius: 100%;
-    z-index: 900;
-    position: fixed;
-    bottom: 10%;
-    right: 35px;
-    cursor: pointer;
-}
-
-ul li {
+    margin-top: 60px;
     font-weight: 200;
+    font-size: 52px;
+    text-shadow: 0px 2px 3px #555;
 }
 
-.bubble-inside {
-    text-align: center;
-    margin: auto;
-    padding-top: 15px;
-    color: #fff;
-}
-
-.bubble-inside span {
-    font-size: 12px;
-    font-weight: 100;
-}
-
-.search {
-    margin: 10px;
-    padding: 10px;
-    border-top: 1px solid #d4d4d4;
-    border-bottom: 1px solid #d4d4d4;
-}
-
-.search label {
-    font-size: 26px;
-}
-
-.search input {
-    box-shadow: 1px 1px 2px inset;
-}
-
-.action-item {
-    width: 40px;
-    height: 40px;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px;
-    display: inline-block;
-    background-color: #2FA4E7;
-    margin: 5px;
-    text-align: center;
-    transition: 0.3s;
-}
-
-.action-holder {
+.fill {
+    background-color: #44b7fa;
+    margin: 0 auto;
+    min-height: 100%;
+    width: 100%;
     position: absolute;
-    bottom: 0px;
-    padding: 0px 0px 10px 10px
+    padding-bottom: 50px;
+    z-index: 1050;
 }
 
-.action-holder a:hover {
-    transform: scale(1.1);
+.btn {
+    width: 220px;
+    margin: 5px;
+    border-radius: 30px;
 }
 
-@media only screen and (max-width: 990px) {
-    .logout {
-        text-align: center;
-        margin: auto;
-        top: 0px;
+.btn.location-btn {
+    width: 120px;
+    border-radius: 3px;
+}
+
+select:hover {
+    cursor: pointer;
+}
+.min-label {
+    float: left;
+}
+
+.max-label {
+    float: right;
+}
+
+.value-label {
+    width: 80px;
+    margin: 0px 8px;
+    padding: 1px 4px;
+    background: #2FA4E7;
+    border-radius: 20px;
+    color: #ffffff;
+    font-weight: 300 !important;
+}
+
+input:hover {
+    cursor: pointer;
+}
+
+.price-slider {
+    width: 90%;
+    margin: auto;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    padding: unset;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.price-slider:hover {
+    opacity: 1;
+}
+
+.search-form {
+    margin: auto;
+    width: 600px;
+    padding: 20px;
+    text-align: center;
+    margin-top: 5%;
+    background: #ffffff;
+    box-shadow: 5px 5px 12px 1px;
+    border: 1px solid #bfbfbf;
+    border-radius: 6px;
+}
+
+@media only screen and (max-width: 600px) {
+    .search-form {
+        width: 300px;
     }
-    
-    .logout button {
-        margin: 10px;
-        float: unset;
+    .container {
+        padding-top: 20px;
     }
+}
+
+.error-mgs {
+    color: #dc3545;
 }
