--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="!isLoading">
   <div class="fill">
     <div>
-      <h1>Shop Saver Console</h1>
+      <h1>Shop Saver Admin Console</h1>
       <!-- Login -->
       <div *ngIf="showForgotPasswordForm === false" class="login-form">
         <h2>Log In</h2>
