--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ h1, h2, h3, h4 {
     padding: 10px;
 }
 
+select {
+  font-weight: 200 !important;
+}
+
 .error-mgs {
     font-size: 80%;
     color: #dc3545;
